--- a/.underc/styles/about.css
+++ b/.underc/styles/about.css
@@ -14,6 +14,16 @@
 	padding-bottom: 40px;
 }
 
+.lal {
+	float: left;
+	font-family: 'PT Mono', monospace;
+}
+
+.ral {
+	float: right;
+	font-family: 'PT Mono', monospace;
+}
+
 #main-nav {
 	text-align: center;
 	background: linear-gradient(to bottom, rgba(225, 225, 225, 0), rgba(175, 175, 175, 1));
@@ -73,6 +83,7 @@ body {
 a:link, a:visited {
 	color: #252928;
 	text-decoration: none;
+	transition: color .25s;
 }
 
 a.nav:hover{
@@ -85,10 +96,11 @@ a:hover {
 	transition: color .25s;
 }
 
-h1,h2 { 
+h1,h2,h3,h4 { 
 	font-family: 'PT Serif', serif; 
 }
 
 p {
 	font-family: 'PT Mono', monospace;
+	text-align: justify;
 }
