--- a/.underc/styles/home.css
+++ b/.underc/styles/home.css
@@ -72,14 +72,20 @@ body {
 a:link, a:visited {
 	color: #252928;
 	text-decoration: none;
+	transition: color .25s;
 }
 
-a:hover {
+a.nav:hover{
 	color: white;
 	transition: color .25s;
 }
 
-h1,h2 { 
+a:hover {
+	color: #909090;
+	transition: color .25s;
+}
+
+h1,h2,h3,h4 { 
 	font-family: 'PT Serif', serif; 
 }
 
