--- a/styles/404.css
+++ b/styles/404.css
@@ -5,7 +5,7 @@ h1 {
 	font-size: 160px;
 }
 p {
-	font-family: 'Cardo', serif;
+	font-family: 'Playfair Display', serif;
 	text-align: center;
 	font-style: italic;
 	font-size: 20px;
