--- a/styles/how-to.css
+++ b/styles/how-to.css
@@ -9,8 +9,8 @@
 #content {
 	padding: 50px;
 }
-#noteNull {
-	background: #e2d0b9;
+.par.note {
+	background: #e5d4c0;
 	border-radius: 7px;
 }
 .bar{
@@ -18,7 +18,7 @@
 	border-radius: 7px;
 	transition: background .5s;
 	display: inline-block;
-	width: 100px;
+	width: 400px;
 	height: 18px;
 	margin: 8px;
 }
@@ -63,7 +63,7 @@ body {
 h2,h3 {
 	font-weight: normal;
 }
-h3 {
+h3,h4 {
 	margin-bottom: 0;
 	margin-top: 0;
 }
@@ -72,4 +72,10 @@ li.nav {
 }
 ul.nav{
 	margin-top: 0;
+}
+a {
+	color: gray;
+}
+a:visited {
+	color: lightgray;
 }
