--- a/styles/about.css
+++ b/styles/about.css
@@ -72,7 +72,8 @@
 
 /* ELEMENTS */
 body {
-	background-image: url("imgs/abiquiu_birdseye.jpeg");
+	background-image: url("imgs/abiquiu_grant.jpeg");
+	/*background-image: url("imgs/abiquiu_birdseye.jpeg");*/
 	background-color: rgba(220, 220, 220, 1);
 	background-position: center;
 	background-repeat: no-repeat;
