--- a/styles/about.css
+++ b/styles/about.css
@@ -74,7 +74,7 @@
 body {
 	background-image: url("imgs/abiquiu_grant.jpeg");
 	background-color: rgba(220, 220, 220, 1);
-	background-position: center;
+	background-position: top;
 	background-repeat: no-repeat;
 	background-size: cover;
 
